securitygroup.tf
resource "aws_security_group" "karan_security_group" {
  name = "karan-sg"
  vpc_id      = aws_vpc.karan_vpc.id

  ingress {
    description = "Allow HTTP traffic"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Allow HTTPS traffic"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "karan-vpc"
    Owner="karan.kumar@cloudeq.com"
    purpose="Tranning"
  }
}
